<resources>

    <string name="app_name">TPS</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">ASCII</string>
    <string name="intro">Enter your ASCII art below!</string>
    <string name="save">Save</string>
    <string name="export">Generate &amp; Save</string>
    <string name="load">Load</string>
    <string name="new_pic">New</string>
    <string name="delete">Delete</string>
    <string name="set_colors">Settings</string>
    <string name="color">Choose a color scheme:</string>
    <string name="colors0">Black on White</string>
    <string name="colors1">White on Black</string>
    <string name="colors2">Yellow on Blue</string>
    <string name="load_pics">Choose from these saved pictures:</string>

    <string-array name="spinner_array_font">
        <item>Choose Font Color</item>
        <item>white</item>
        <item>blue</item>
        <item>black</item>
        <item>red</item>
        <item>green</item>
        <item>orange</item>
        <item>yellow</item>
        <item>purple</item>
        <item>crimson</item>
        <item>skyblue</item>
    </string-array>
    <string-array name="spinner_array_backGround">
        <item>Choose Background Color</item>
        <item>red</item>
        <item>blue</item>
        <item>black</item>
        <item>white</item>
        <item>green</item>
        <item>orange</item>
        <item>yellow</item>
        <item>purple</item>
        <item>crimson</item>
        <item>skyblue</item>
    </string-array>

    <string name="selectFont">Select Font Color</string>
    <string name="selectBackground">Select Background Color</string>
    <string name="set">Set</string>
    <string name="custom">Custom</string>

</resources>